# scl

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  meson.build  scl.txt
examples/: 05.dictionary.scl  08.for.scl  09.access.scl  1.boolean.scl  1.scl  12.command.scl  13.function.scl  14.include.scl  16.set-attribute.scl  2.number.scl  3.string.scl  4.array.scl  5.dictionary.scl  6.compare.scl  7.if.scl  8.for.scl  8.forvalue.scl
examples/01.tests/: 04.array.scl  10.access-range.scl  11.range-iterator.scl  12.command.scl  13.function.scl  14.include.scl  15.import.scl
examples/01.tests/15.import/: Makefile.am  main.cpp
examples/15.import/: Makefile.am  configure.ac
src/: main.cpp
src/scl/: ASTVisitor.cpp  ASTVisitor.hpp  Command.g4  Conform.g4  ConformVisitor.cpp  ConformVisitor.hpp  context.cpp  context.hpp  lexer.ll  meson.build  module.cpp  module.hpp  parser.yy  parserresult.cpp  parserresult.hpp  scl.g4  scope.cpp  scope.hpp  type.cpp  type.hpp
src/scl/ast/: access.cpp  access.hpp  array.cpp  array.hpp  assign.cpp  assign.hpp  assignattribute.cpp  assignattribute.hpp  command.cpp  command.hpp  comparator.cpp  comparator.hpp  dictionary.cpp  dictionary.hpp  expression.cpp  expression.hpp  expressiontype.cpp  expressiontype.hpp  for.cpp  for.hpp  forvalue.cpp  forvalue.hpp  functiondeclare.cpp  functiondeclare.hpp  if.cpp  if.hpp  import.cpp  import.hpp  include.cpp  include.hpp  instruction.cpp  instruction.hpp  operand.cpp  operand.hpp  print.cpp  print.hpp  printStatic.cpp  printStatic.hpp  range.cpp  range.hpp  (+6 more)
src/scl/ast/commands/: argument.cpp  argument.hpp
src/scl/parser/: Command.interp  Command.tokens  CommandBaseVisitor.cpp  CommandBaseVisitor.h  CommandLexer.cpp  CommandLexer.h  CommandLexer.interp  CommandParser.cpp  CommandParser.h  CommandVisitor.cpp  CommandVisitor.h  Conform.interp  Conform.tokens  ConformBaseVisitor.cpp  ConformBaseVisitor.h  ConformLexer.cpp  ConformLexer.h  ConformLexer.interp  ConformParser.cpp  ConformParser.h  ConformVisitor.cpp  ConformVisitor.h  Parser.hpp  meson.build  scl.g4  scl.interp  scl.tokens  sclBaseVisitor.cpp  sclBaseVisitor.h  sclLexer.cpp  sclLexer.h  sclLexer.interp  sclLexer.tokens  sclParser.cpp  sclParser.h  sclVisitor.cpp  sclVisitor.h
src/scl/types/: array.cpp  array.hpp  boolean.cpp  boolean.hpp  dictionary.cpp  dictionary.hpp  float.cpp  float.hpp  function.cpp  function.hpp  functionbody.cpp  functionbody.hpp  functionparameter.cpp  functionparameter.hpp  integer.cpp  integer.hpp  iterator.cpp  iterator.hpp  iteratorarray.cpp  iteratorarray.hpp  iteratordictionary.cpp  iteratordictionary.hpp  iteratorfloat.cpp  iteratorfloat.hpp  iteratorinteger.cpp  iteratorinteger.hpp  iteratorstring.cpp  iteratorstring.hpp  string.cpp  string.hpp  undefined.cpp  undefined.hpp
